--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>dev.unbusy</groupId>
     <artifactId>igcse-pre-release</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
